# ORC-Omics

./: .gitignore  Example 1.ipynb  Example 2.ipynb  Figure 1.ipynb  MM_sample.npz  README.md  pyproject.toml  requirements.txt  test_ADJ.csv  test_data.xlsx
orco/: ORC.py  graph_attributes.py  metrics.py  util.py
orcomics/: ORC.py  graph_attributes.py  util.py
